# CMakeTemplete

./: .gitignore  CMakeLists.txt  CMakePresets.json
cmake/: cpack.cmake  vcpkg.cmake
scripts/: init-vcpkg.bat
src/: CMakeLists.txt  pch.h
src/ui/: CMakeLists.txt
